implemented classes for item controller, ui controller, and app

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
               </button>
               <button class="add-btn btn red">
                 <i class="fa fa-plus"></i> Delete Meal
-              </button>
+              </button> -->
               <button class="add-btn btn grey">
                 <i class="fa fa-chevron-circle-left"></i> Back
-              </button> -->
+              </button>
             </div>
           </form>
         </div>
@@ -68,10 +68,10 @@
 
       <!-- Item List -->
       <ul id="item-list" class="collection">
-        <li class="collection-item" id="item-0">
+        <!-- <li class="collection-item" id="item-0">
           <strong>Sausage McMuffin: </strong> <em>700 Calories</em>
           <a href="#" class="secondary-content"><i class="fa fa-pencil"></i></a>
-        </li>
+        </li> -->
       </ul>
     </div>
 
@@ -85,6 +85,6 @@
       src="https://kit.fontawesome.com/2f4b06d69c.js"
       crossorigin="anonymous"
     ></script>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
