--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
               <!-- <button class="update-btn btn orange">
                 <i class="fa fa-edit"></i> Edit Meal
               </button>
-              <button class="add-btn btn red">
+              <button class="delete-btn btn red">
                 <i class="fa fa-plus"></i> Delete Meal
-              </button>
-              <button class="add-btn btn grey">
-                <i class="fa fa-chevron-circle-left"></i> Back
               </button> -->
+              <button class="back-btn btn grey right">
+                <i class="fa fa-chevron-circle-left"></i> Back
+              </button>
             </div>
           </form>
         </div>
@@ -68,10 +68,10 @@
 
       <!-- Item List -->
       <ul id="item-list" class="collection">
-        <li class="collection-item" id="item-0">
+        <!-- <li class="collection-item" id="item-0">
           <strong>Sausage McMuffin: </strong> <em>700 Calories</em>
           <a href="#" class="secondary-content"><i class="fa fa-pencil"></i></a>
-        </li>
+        </li> -->
       </ul>
     </div>
 
