--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
               <button class="add-btn btn blue darken-3">
                 <i class="fa fa-plus"></i> Add Meal
               </button>
-              <!-- <button class="update-btn btn orange">
+              <button class="edit-btn btn orange">
                 <i class="fa fa-edit"></i> Edit Meal
               </button>
               <button class="delete-btn btn red">
                 <i class="fa fa-plus"></i> Delete Meal
-              </button> -->
+              </button>
               <button class="back-btn btn grey right">
                 <i class="fa fa-chevron-circle-left"></i> Back
               </button>
